# chatbi-park

./: .gitignore  README.md  pyproject.toml
ChatBI/: README.md  agent_planner.py  api_service.py  database.py  error_analyzer.py  field_matcher.py  indicator_retriever.py  llm_client.py  main.py  prompt_builder.py  query_decomposer.py  report_generator.py  result_formatter.py  runtime_factory.py  schema_linker.py  table_retriever.py  test_embedding.py  text2sql_v0.py  vector_search_demo.py
agent/: __init__.py
api/: service.py
database/: 01_schema.sql  02_mock_data.sql  __init__.py  client.py
doc/: 01_项目架构.md
docs/: 02_Agent架构.md  03_Planner任务规划.md  04_SchemaLinking实现.md  05_Prompt设计.md  06_SQL生成实现.md  07_智慧停车数据库设计.md  08_Schema与SchemaLinking改造记录.md  09_Prompt改造记录.md  09_指标知识库RAG改造记录.md  11_Agent改造记录.md  12_Report改造记录.md  13_项目总结.md
prompts/: builder.py
rag/: __init__.py  indicator_knowledge.py  indicator_retriever.py  indicators.json  indicators_full.json  test_parking_indicator_rag.py
schema/: __init__.py  field_matcher.py  join_resolver.py  schema_linker.py  table_retriever.py  vector_search_demo.py
tests/: test_agent_planner.py  test_api_query_options.py  test_database_runtime.py  test_parking_agent.py  test_parking_schema_linking.py  test_prompt_and_config.py  test_query_decomposer.py  test_report_generator.py  test_runtime_factory.py  test_security.py
text2sql/: __init__.py  evaluator.py  llm_client.py  main.py  query_parser.py  test_cases.json  test_embedding.py
tools/: __init__.py  config.py  runtime_factory.py  security.py
(+15 files in other folders)
