[project]
name = "chatbi-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "fastapi>=0.136.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.3.2",
    "numpy>=2.4.6",
    "openai>=2.38.0",
    "pydantic>=2.11.0",
    "pymysql>=1.2.0",
    "pytest>=9.1.1",
    "python-dotenv>=1.2.2",
    "uvicorn>=0.35.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
